<resources>
    <string name="app_name">Meter</string>
    <string name="login_info"><b>이메일과 비밀번호를\n입력하세요</b></string>
    <string name="signin_info"><b>사용할 이메일을 입력하고\n비밀번호를 설정하세요</b></string>
    <string name="id">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="member">가구 인원</string>
    <string name="wrong_id">잘못된 유형의 이메일 주소입니다.</string>
    <string name="wrong_pw">비밀번호는 8자 이상이어야 합니다.</string>
    <string name="right_pw">사용가능한 비밀번호입니다.</string>
    <string name="ckpw_1">비밀번호가 일치하지 않습니다.</string>
    <string name="ckpw_2">비밀번호가 일치합니다.</string>
    <string name="log_in">로그인</string>
    <string name="log_out">로그아웃</string>
    <string name="sign_in">회원가입</string>
    <string name="search">검색</string>
    <string name="date"><b>일별</b></string>
    <string name="week"><b>주별</b></string>
    <string name="month"><b>월별</b></string>
    <string name="year"><b>연별</b></string>
    <string name="value">전체 사용량은</string>
    <string name="end">입니다.</string>
    <string name="avg">평균 사용량</string>
    <string name="detail">상세정보</string>
    <string name="cancle">취소</string>


    <string-array name="year_list">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

    <string-array name="month_list">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="date_list_31">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="date_list_30">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="date_list_29">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
    </string-array>

    <string-array name="date_list_28">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
</resources>