<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:id="@+id/signin_activity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/signin_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="180dp"
        android:backgroundTint="#CCCCCC"
        android:hint="@string/id"
        android:textColor="#777777"
        android:textSize="12sp"
        android:inputType = "textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrong_sign_id"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/sign_id"
        app:layout_constraintTop_toBottomOf="@+id/sign_id" />

    <EditText
        android:id="@+id/sign_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#CCCCCC"
        android:hint="@string/password"
        android:textColor="#777777"
        android:textSize="12sp"
        android:inputType = "textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_sign_id" />

    <TextView
        android:id="@+id/wrong_sign_pw"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:textColor="#FF0000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/sign_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_password" />

    <EditText
        android:id="@+id/sign_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#CCCCCC"
        android:hint="@string/password_confirm"
        android:textColor="#777777"
        android:textSize="12sp"
        android:inputType = "textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_sign_pw" />

    <TextView
        android:id="@+id/wrong_sign_pwcf"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:textColor="#FF0000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/sign_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/sign_password_confirm" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="#4DC7FF"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>